# ms_stt

./: .containerignore  .gitignore  Containerfile  README.md  pyproject.toml
src/ms_stt/: arguments.py  client.py  logs.py  main.py
src/ms_stt/protos/: stt.proto  stt_pb2.py  stt_pb2.pyi  stt_pb2_grpc.py
